--- a/About us.html
+++ b/About us.html
@@ -28,7 +28,7 @@
 					<a class="nave-link" href="index.html" class="active"><li>Home</li></a>
 					<a class="nave-link" href="About us.html" class="active"><li>About us</li></a>
 					<a class="nave-link" href="#" class="active"><li>Programs</li></a>
-					<a class="nave-link" href="#" class="active"><li>Membership</li></a>
+					<a class="nave-link" href="Membership.html" class="active"><li>Membership</li></a>
 					<a class="nave-link" href="#" class="active"><li>Instructors</li></a>
 					<a class="nave-link" href="#" class="active"><li>Contacts</li></a>
 					<a class="nave-link" href="#" class="active"><li>Schedule</li></a>
