--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" type="text/css" href="Mystyle.css">
 	<link href="https://fonts.googleapis.com/css2?family=Fuggles&display=swap" rel="stylesheet">
 
-
+	
 </head>
 <body>
 		<header>
@@ -22,7 +22,7 @@
 					<a class="nave-link" href="index.html" class="active"><li>Home</li></a>
 					<a class="nave-link" href="About us.html" class="active"><li>About us</li></a>
 					<a class="nave-link" href="#" class="active"><li>Programs</li></a>
-					<a class="nave-link" href="#" class="active"><li>Membership</li></a>
+					<a class="nave-link" href="Membership.html" class="active"><li>Membership</li></a>
 					<a class="nave-link" href="#" class="active"><li>Instructors</li></a>
 					<a class="nave-link" href="#" class="active"><li>Contacts</li></a>
 					<a class="nave-link" href="#" class="active"><li>Schedule</li></a>
@@ -36,6 +36,41 @@
 		  </div>
 		  </div>
 		</header>
+
+		<section class="membership-info">
+			<h2>Membership Plans</h2>
+			<div class="membership-plan">
+				<h3>Basic Membership</h3>
+				<p>Only Gym.</p>
+				<p>Price: 1000/- per month</p>
+				<button>Select Plan</button>
+			</div>
+			<div class="membership-plan">
+				<h3>Premium Membership</h3>
+				<p>Access to the gym facilities.</p>
+				<p>Price: 2500/- per month</p>
+				<button>Select Plan</button>
+			</div>
+			<div class="membership-plan">
+				<h3>Diamond Membership</h3>
+				<p>Access to gym facilities and personal trainer sessions.</p>
+				<p>Price: 5000/- per month</p>
+				<button>Select Plan</button>
+			</div>
+		</section>
+	
+		<footer>
+			<p> 2023 Your Gym. All rights reserved.</p>
+			hiiii<br>
+			hiiii<br>
+			hiiii<br>
+			hiiii<br>
+			hiiii<br>
+			hiiii<br>
+			hiiii<br>
+			hiiii<br>
+			hiiii
+		</footer>
 </body>
 </html>
 
