--- a/Membership.html
+++ b/Membership.html
@@ -11,7 +11,7 @@
     <header>
         <nav>
             <div class="logo">
-                <h1><i class="fa-solid fa-dumbbell"></i>Gold's <span>Gym</span></i></h1>
+                <h1><i class="fa-solid fa-dumbbell"></i>Gold’s <span>Gym</span></i></h1>
             </div>
             <ul>
                 <a class="nave-link" href="index.html" class="active"><li>Home</li></a>
@@ -23,12 +23,7 @@
                 <a class="nave-link" href="#" class="active"><li>Schedule</li></a>
             </ul>
         </nav>
-        
-        <h1>Welcome to Our Gym</h1>
-        <p>Your Journey to Fitness Starts Here</p>
-    </header>
-
-    <section class="membership-info">
+       <section class="membership-info">
         <h2>Membership Plans</h2>
         <div class="membership-plan">
             <h3>Basic Membership</h3>
@@ -49,18 +44,7 @@
             <button>Select Plan</button>
         </div>
     </section>
+    </header>
 
-    <footer>
-        <p> 2023 Your Gym. All rights reserved.</p>
-        hiiii<br>
-        hiiii<br>
-        hiiii<br>
-        hiiii<br>
-        hiiii<br>
-        hiiii<br>
-        hiiii<br>
-        hiiii<br>
-        hiiii
-    </footer>
 </body>
 </html>
