--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" >
 
 <title>Fitness center website</title>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" /> 
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" 	integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" 	crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<link rel="stylesheet" type="text/css" href="Mystyle.css">
 	<link href="https://fonts.googleapis.com/css2?family=Fuggles&display=swap" rel="stylesheet">
 
 	
-</head>
+</head> 
 <body>
 		<header>
 			<nav>
@@ -19,10 +19,10 @@
 					<h1><i class="fa-solid fa-dumbbell"></i>Gold's <span>Gym</span></i></h1>
 				</div>
 				<ul>
-					<a class="nave-link" href="index.html" class="active"><li>Home</li></a>
+					<a class="nave-link" href="index.html" target="first" class="active"><li>Home</li></a>
 					<a class="nave-link" href="About us.html" class="active"><li>About us</li></a>
 					<a class="nave-link" href="#" class="active"><li>Programs</li></a>
-					<a class="nave-link" href="Membership.html" class="active"><li>Membership</li></a>
+					<a class="nave-link" href="Membership.html" target="second" class="active"><li>Membership</li></a>
 					<a class="nave-link" href="#" class="active"><li>Instructors</li></a>
 					<a class="nave-link" href="#" class="active"><li>Contacts</li></a>
 					<a class="nave-link" href="#" class="active"><li>Schedule</li></a>
@@ -32,45 +32,13 @@
 		     <h1><span class="border-bottom">NO PAIN </span><span class="text-primary">NO GAIN </span></h1><br>
 			<div class="para" >
 			 <p><font color="white" size="6px">Unlock Your Potential: Transform Your Life at Our State of the Art Gym.<br>  
-			 Discover Fitness, Health, and Strength Like Never Before. Join Us Today!"</font></p>
+			 Discover Fitness, Health, and Strength Like Never Before. Join Us Today!" hiiis hiihuguughig</font></p>
 		  </div>
 		  </div>
 		</header>
 
-		<section class="membership-info">
-			<h2>Membership Plans</h2>
-			<div class="membership-plan">
-				<h3>Basic Membership</h3>
-				<p>Only Gym.</p>
-				<p>Price: 1000/- per month</p>
-				<button>Select Plan</button>
-			</div>
-			<div class="membership-plan">
-				<h3>Premium Membership</h3>
-				<p>Access to the gym facilities.</p>
-				<p>Price: 2500/- per month</p>
-				<button>Select Plan</button>
-			</div>
-			<div class="membership-plan">
-				<h3>Diamond Membership</h3>
-				<p>Access to gym facilities and personal trainer sessions.</p>
-				<p>Price: 5000/- per month</p>
-				<button>Select Plan</button>
-			</div>
-		</section>
+		
 	
-		<footer>
-			<p> 2023 Your Gym. All rights reserved.</p>
-			hiiii<br>
-			hiiii<br>
-			hiiii<br>
-			hiiii<br>
-			hiiii<br>
-			hiiii<br>
-			hiiii<br>
-			hiiii<br>
-			hiiii
-		</footer>
 </body>
 </html>
 
