--- a/index.html
+++ b/index.html
@@ -26,13 +26,14 @@
 					<a class="nave-link" href="#" class="active"><li>Instructors</li></a>
 					<a class="nave-link" href="#" class="active"><li>Contacts</li></a>
 					<a class="nave-link" href="#" class="active"><li>Schedule</li></a>
+					<a class="nave-link" href="login form.html" class="active"><li>Schedule</li></a>
 				</ul>
 			</nav>
 		  <div class="header-container">
 		     <h1><span class="border-bottom">NO PAIN </span><span class="text-primary">NO GAIN </span></h1><br>
 			<div class="para" >
 			 <p><font color="white" size="6px">Unlock Your Potential: Transform Your Life at Our State of the Art Gym.<br>  
-			 Discover Fitness, Health, and Strength Like Never Before. Join Us Today!" hiiis hiihuguughig</font></p>
+			 Discover Fitness, Health, and Strength Like Never Before. Join Us Today!" </font></p>
 		  </div>
 		  </div>
 		</header>
