--- a/login form.html
+++ b/login form.html
@@ -6,6 +6,7 @@
 <meta charset="UTF-8">
 
 <meta name="viewport"content="width=device-width,initial-scale=1.8">
+<link rel="stylesheet" type="text/css" href="login.css">
 
 
 <title>Login <form action=""></form></title>
