--- a/About us.html
+++ b/About us.html
@@ -35,11 +35,11 @@
 				</ul>
 			</nav>
 		 <br><br><h1 class="color">About US </h1><br><br><br><br><br>
-<p>Gold’s Gym Fitness Institute was started on World Health Day on 7 th April 2006. It’s been more than a decade of <br> educating people in fitness. Every year 1000+ students pass out of the institute. Gold’sGym Fitness Institute offers the <br> most exciting and up-to-date curriculum as well as ongoing training in all aspects of the fitness industry.</p><br><br>
+<p>Gold's Gym Fitness Institute was started on World Health Day on 7 th April 2006. It's been more than a decade of <br> educating people in fitness. Every year 1000+ students pass out of the institute. Gold’sGym Fitness Institute offers the <br> most exciting and up-to-date curriculum as well as ongoing training in all aspects of the fitness industry.</p><br><br>
 
- <p>Gold’s Gym Fitness Institute is the only Advanced Personal Trainer program, which offers you low-cost tuition, fast test <br> results and complete career development Becoming a Gold’s Gym Fitness Institute certified Advanced Personal trainer <br> is your foundation for success.It offers you complete approach to fitness, wellness and business skills. Make an <br> investment in yourself and become a Gold’s Gym Fitness Institute certified personal trainer.</p>
+ <p>Gold's Gym Fitness Institute is the only Advanced Personal Trainer program, which offers you low-cost tuition, fast test <br> results and complete career development Becoming a Gold’s Gym Fitness Institute certified Advanced Personal trainer <br> is your foundation for success.It offers you complete approach to fitness, wellness and business skills. Make an <br> investment in yourself and become a Gold’s Gym Fitness Institute certified personal trainer.</p>
 	
 	</header>
-</body>
+</body> 
 </html>
 
