--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 					<a class="nave-link" href="#" class="active"><li>Instructors</li></a>
 					<a class="nave-link" href="#" class="active"><li>Contacts</li></a>
 					<a class="nave-link" href="#" class="active"><li>Schedule</li></a>
-					<a class="nave-link" href="login form.html" class="active"><li>Schedule</li></a>
+					<a class="nave-link" href="login form.html" class="active"><li>login</li></a>
 				</ul>
 			</nav>
 		  <div class="header-container">
