--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<ul>
 					<a class="nave-link" href="index.html" target="first" class="active"><li>Home</li></a>
 					<a class="nave-link" href="About us.html" class="active"><li>About us</li></a>
-					<a class="nave-link" href="#" class="active"><li>Programs</li></a>
+					<a class="nave-link" href="#" class="active"><li>Classes</li></a>
 					<a class="nave-link" href="Membership.html" target="second" class="active"><li>Membership</li></a>
 					<a class="nave-link" href="#" class="active"><li>Instructors</li></a>
 					<a class="nave-link" href="#" class="active"><li>Contacts</li></a>
