--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
 					<a class="nave-link" href="#" class="active"><li>Instructors</li></a>
 					<a class="nave-link" href="#" class="active"><li>Contacts</li></a>
 					<a class="nave-link" href="#" class="active"><li>Schedule</li></a>
-					<a class="nave-link" href="login form.html" class="active"><li>login</li></a>
 				</ul>
+				<div class="left">
+					<button class="log-in"><a href="loginform.html">LogIn</a></button>
+				</div>
 			</nav>
 		  <div class="header-container">
 		     <h1><span class="border-bottom">NO PAIN </span><span class="text-primary">NO GAIN </span></h1><br>
@@ -37,7 +39,6 @@
 		  </div>
 		  </div>
 		</header>
-		<footer>dharma manan</footer>
 
 		
 	
