--- a/Contacts.html
+++ b/Contacts.html
@@ -36,7 +36,7 @@
                 <a class="nave-link" href="#" class="active">
                     <li>Instructors</li>
                 </a>
-                <a class="nave-link" href="#" class="active">
+                <a class="nave-link" href="Contacts.html" class="active">
                     <li>Contacts</li>
                 </a>
                 <a class="nave-link" href="#" class="active">
