--- a/Membership.html
+++ b/Membership.html
@@ -19,7 +19,7 @@
                 <a class="nave-link" href="#" class="active"><li>Programs</li></a>
                 <a class="nave-link" href="Membership.html" class="active"><li>Membership</li></a>
                 <a class="nave-link" href="#" class="active"><li>Instructors</li></a>
-                <a class="nave-link" href="#" class="active"><li>Contacts</li></a>
+                <a class="nave-link" href="Contacts.html" class="active"><li>Contacts</li></a>
                 <a class="nave-link" href="#" class="active"><li>Schedule</li></a>
             </ul>
         </nav>
