--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 					<a class="nave-link" href="#" class="active"><li>Classes</li></a>
 					<a class="nave-link" href="Membership.html" target="second" class="active"><li>Membership</li></a>
 					<a class="nave-link" href="#" class="active"><li>Instructors</li></a>
-					<a class="nave-link" href="#" class="active"><li>Contacts</li></a>
+					<a class="nave-link" href="Contacts.html" class="active"><li>Contacts</li></a>
 					<a class="nave-link" href="#" class="active"><li>Schedule</li></a>
 				</ul>
 				<div class="left">
