--- a/Contacts.html
+++ b/Contacts.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>contact us</title>
-    <link rel="stylesheet" href="contact.css">
+    <link rel="stylesheet" href="Contacts.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,
                        initial-scale=1,
@@ -77,7 +77,7 @@
 
                 </form>
             </div>
-            <h2 class="caption">We do our best to get back to you within a<br> few hours during 10am–6pm CST and
+            <h2 class="caption">We do our best to get back to you within a<br> few hours during 10am-6pm CST and
                 9am-<br>5pm JST, Monday through Friday.</h2>
             <h5 class="caption1">Response time might be longer on off-hours and the weekends.</h5>
         </div>
