--- a/Contacts.html
+++ b/Contacts.html
@@ -76,7 +76,7 @@
                     <input type="submit" value="send" id="button">
 
                 </form>
-            </div>
+            </div class=caption2>
             <h2 class="caption">We do our best to get back to you within a<br> few hours during 10am-6pm CST and
                 9am-<br>5pm JST, Monday through Friday.</h2>
             <h5 class="caption1">Response time might be longer on off-hours and the weekends.</h5>
