--- a/Contacts.html
+++ b/Contacts.html
@@ -18,31 +18,20 @@
     <header>
         <nav>
             <div class="logo">
-                <h1><i class="fa-solid fa-dumbbell"></i>Gold’s <span>Gym</span></i></h1>
+                <h1><i class="fa-solid fa-dumbbell"></i>Gold's <span>Gym</span></i></h1>
             </div>
             <ul>
-                <a class="nave-link" href="index.html" class="active">
-                    <li>Home</li>
-                </a>
-                <a class="nave-link" href="About us.html" class="active">
-                    <li>AboutUs</li>
-                </a>
-                <a class="nave-link" href="#" class="active">
-                    <li>Programs</li>
-                </a>
-                <a class="nave-link" href="Membership.html" class="active">
-                    <li>Membership</li>
-                </a>
-                <a class="nave-link" href="#" class="active">
-                    <li>Instructors</li>
-                </a>
-                <a class="nave-link" href="Contacts.html" class="active">
-                    <li>Contacts</li>
-                </a>
-                <a class="nave-link" href="#" class="active">
-                    <li>Schedule</li>
-                </a>
+                <a class="nave-link" href="index.html" target="first" class="active"><li>Home</li></a>
+                <a class="nave-link" href="About us.html" class="active"><li>About us</li></a>
+                <a class="nave-link" href="#" class="active"><li>Classes</li></a>
+                <a class="nave-link" href="Membership.html" target="second" class="active"><li>Membership</li></a>
+                <a class="nave-link" href="#" class="active"><li>Instructors</li></a>
+                <a class="nave-link" href="Contacts.html" class="active"><li>Contacts</li></a>
+                <a class="nave-link" href="#" class="active"><li>Schedule</li></a>
             </ul>
+            <div class="left">
+                <button class="log-in"><a href="loginform.html">LogIn</a></button>
+            </div>
         </nav>
         <div>
             <div class="heading">
