--- a/Contacts.html
+++ b/Contacts.html
@@ -27,7 +27,7 @@
                 <a class="nave-link" href="Membership.html" target="second" class="active"><li>Membership</li></a>
                 <a class="nave-link" href="#" class="active"><li>Instructors</li></a>
                 <a class="nave-link" href="Contacts.html" class="active"><li>Contacts</li></a>
-                <a class="nave-link" href="#" class="active"><li>Schedule</li></a>
+                <a class="nave-link" href="#" class="active"><li>Schedules</li></a>
             </ul>
             <div class="left">
                 <button class="log-in"><a href="loginform.html">LogIn</a></button>
