--- a/Contacts.html
+++ b/Contacts.html
@@ -68,6 +68,118 @@
                 9am-<br>5pm JST, Monday through Friday.</h2>
             <h5 class="caption1">Response time might be longer on off-hours and the weekends.</h5>
         </div>
+        <footer>
+			<div class="footer-line"></div>
+			<div class="footer-wrapper">
+			  <div class="footer-columns">
+				<section>
+				  <h3>Quick Links</h3>
+				  <ul>
+					<li>
+					  <a href="index.html" title="API">Home</a>
+					</li>
+					<li>
+					  <a href="About us.html" title="Documentation">About us</a>
+					</li>
+					<li>
+					  <a href="Membership.html" title="Release Notes">Membership</a>
+					</li>
+				  </ul>
+				</section>
+				<section>
+				  <h3>our services</h3>
+				  <ul>
+					<li>
+					  <a href="#" title="Support">Fat loss</a>
+					</li>
+					<li>
+					  <a href="#" title="Sitemap">Zumba</a>
+					</li>
+					<li>
+					  <a href="#" title="Newsletter">Yoga</a>
+					</li>
+					<li>
+					  <a href="#" title="Help Centre">Muscle Gain</a>
+					</li>
+					<li>
+					  <a href="#" title="Investor">Body mass index</a>
+					</li>
+				  </ul>
+				</section>
+				<section>
+				  <h3>Company</h3>
+				  <ul>
+					<li>
+					  <a href="#" title="About Us">About Us</a>
+					</li>
+					<li>
+					  <a href="#" title="Press">Press</a>
+					</li>
+					<li>
+					  <a href="#" title="Contact">Contact</a>
+					</li>
+				  </ul>
+				</section>
+				<section>
+				  <h3>Legal</h3>
+				  <ul>
+					<li>
+					  <a href="#" title="Terms and services">
+						Terms
+					  </a>
+					</li>
+					<li>
+					  <a href="#" title="Privacy Policy">
+						Privacy
+					  </a>
+					</li>
+					<li>
+					  <a href="#" title="Cookies">
+						Cookies
+					  </a>
+					</li>
+					<li>
+					  <a href="#" title="Licenses">
+						Licenses
+					  </a>
+					</li>
+					<li>
+					  <a href="#" title="Cookies">
+						Contact
+					  </a>
+					</li>
+				  </ul>
+				</section>
+				<section class="Location">
+				  <h3>Contact Info</h3>
+				  <a
+					href="https://www.google.com/maps/place/Mantreshy+apartment/@23.2395542,72.6449515,17z/data=!4m6!3m5!1s0x395c2b8734fb1bd7:0x32b26f498139962c!8m2!3d23.2395493!4d72.6475264!16s%2Fg%2F11sh4hktrb?entry=ttu"><i
+					  class="fa-solid fa-location-dot" style="color: #ffffff;"></i> FF-1, Plot No.374, Mantreshay Appartment,
+					Sector - 23, Gandhinagar, Gujarat</a><br><br>
+				  <a href="9537337323"><i class="fa-solid fa-phone" style="color: #ffffff;"></i> +91 9510652622</a><br><br>
+				  <a
+					href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcSPFrCVctcbkxndnCwFTxFWfdNnbsDHWMZqRZgmqBDjtKRvkdLDSrVbfCqdWSbhqJJfLFNfq"><i
+					  class="fa-solid fa-envelope" style="color: #ffffff;"></i> Gold's Gym@gmail.com</a>
+				</section>
+			  </div>
+			  <div class="footer-bottom">
+				<small>© Online Sports Academy Pvt. Ltd. <span id="year"></span>, All rights reserved</small>
+				<span class='social-links'>
+				  <a href="https://www.instagram.com/dharma.ahjoliya/" title="Instagram">
+					<img src="svg/instagram.svg" alt="">
+				  </a>
+				  <a href="https://twitter.com/AhjoliyaDharma" title="Twitter">
+					<img src="svg/twitter.svg" alt='Twitter'>
+				  </a>
+				  <a href="https://www.youtube.com/channel/UCnzkitdFbUe6NBDjyY7v4gQ" title="Youtube">
+					<img src="svg/youtube.svg" alt='YouTube'>
+				  </a>
+				</span>
+			  </div>
+			</div>
+		  </footer>
+		
+
 </body>
 
 </html>
