--- a/Membership.html
+++ b/Membership.html
@@ -99,6 +99,7 @@
 
     <footer>
         <div class="footer-line"></div>
+        <div class="footer-line2"></div>
         <div class="footer-wrapper">
           <div class="footer-columns">
             <section>
