--- a/About us.html
+++ b/About us.html
@@ -27,10 +27,22 @@
 				<ul>
 					<a class="nave-link" href="index.html" class="active"><li>Home</li></a>
 					<a class="nave-link" href="About us.html" class="active"><li>About us</li></a>
-					<a class="nave-link" href="#" class="active"><li>Programs</li></a>
+				    <div class="dropdown">
+						<a class="nave-link" href="#" class="active"><li>Our services</li></a>
+						<div class="dropdown-content">
+							<a href="#">Fat Loss</a>
+							<a href="#">Zumba</a>
+							<a href="#">Yoga</a>
+							<a href="#">Muscle Gain</a>
+							<a href="#">Body Mass Index</a>
+						  </div>
+						</div>
 					<a class="nave-link" href="Membership.html" class="active"><li>Membership</li></a>
 					<a class="nave-link" href="Contacts.html" class="active"><li>Contacts</li></a>
 				</ul>
+				<div class="left">
+					<button class="log-in"><a href="loginform.html">LogIn</a></button>
+				</div>
 			</nav>
 		 <br><br><h1 class="color">About US </h1><br><br><br><br><br>
 <p>Gold's Gym Fitness Institute was started on World Health Day on 7 th April 2006. It's been more than a decade of <br> educating people in fitness. Every year 1000+ students pass out of the institute. Gold’sGym Fitness Institute offers the <br> most exciting and up-to-date curriculum as well as ongoing training in all aspects of the fitness industry.</p><br><br>
@@ -119,6 +131,7 @@
 				  </a>
 				</li>
 			  </ul>
+			  
 			</section>
 			<section class="Location">
 			  <h3>Contact Info</h3>
@@ -133,12 +146,12 @@
 			</section>
 		  </div>
 		  <div class="footer-bottom">
-			<small>© Online Sports Academy Pvt. Ltd. <span id="year"></span>, All rights reserved</small>
+			<small>Gold's Gym website <span id="year"></span>, All rights reserved</small>
 			<span class='social-links'>
-			  <a href="https://www.instagram.com/dharma.ahjoliya/" title="Instagram">
+			  <a href="#" title="Instagram">
 				<img src="svg/instagram.svg" alt="">
 			  </a>
-			  <a href="https://twitter.com/AhjoliyaDharma" title="Twitter">
+			  <a href="#" title="Twitter">
 				<img src="svg/twitter.svg" alt='Twitter'>
 			  </a>
 			  <a href="https://www.youtube.com/channel/UCnzkitdFbUe6NBDjyY7v4gQ" title="Youtube">
