--- a/Contacts.html
+++ b/Contacts.html
@@ -23,13 +23,23 @@
             <ul>
                 <a class="nave-link" href="index.html" target="first" class="active"><li>Home</li></a>
                 <a class="nave-link" href="About us.html" class="active"><li>About us</li></a>
-                <a class="nave-link" href="#" class="active"><li>Classes</li></a>
+				<div class="dropdown">
+					<a class="nave-link" href="#" class="active"><li>Our services</li></a>
+					<div class="dropdown-content">
+						<a href="#">Fat Loss</a>
+						<a href="#">Zumba</a>
+						<a href="#">Yoga</a>
+						<a href="#">Muscle Gain</a>
+						<a href="#">Body Mass Index</a>
+					  </div>
+					</div>
                 <a class="nave-link" href="Membership.html" target="second" class="active"><li>Membership</li></a>
                 <a class="nave-link" href="Contacts.html" class="active"><li>Contacts</li></a>
             </ul>
-            <div class="left">
-                <button class="log-in"><a href="loginform.html">LogIn</a></button>
-            </div>
+			<div class="left">
+				<button class="log-in"><a href="loginform.html">LogIn</a></button>
+			</div>
+            
         </nav>
         <div>
             <div class="heading">
@@ -163,12 +173,12 @@
 				</section>
 			  </div>
 			  <div class="footer-bottom">
-				<small>© Online Sports Academy Pvt. Ltd. <span id="year"></span>, All rights reserved</small>
+				<small>Gold's Gym website <span id="year"></span>, All rights reserved</small>
 				<span class='social-links'>
-				  <a href="https://www.instagram.com/dharma.ahjoliya/" title="Instagram">
+				  <a href="#" title="Instagram">
 					<img src="svg/instagram.svg" alt="">
 				  </a>
-				  <a href="https://twitter.com/AhjoliyaDharma" title="Twitter">
+				  <a href="#" title="Twitter">
 					<img src="svg/twitter.svg" alt='Twitter'>
 				  </a>
 				  <a href="https://www.youtube.com/channel/UCnzkitdFbUe6NBDjyY7v4gQ" title="Youtube">
