--- a/Contacts.html
+++ b/Contacts.html
@@ -24,7 +24,7 @@
                 <a class="nave-link" href="index.html" target="first" class="active"><li>Home</li></a>
                 <a class="nave-link" href="About us.html" class="active"><li>About us</li></a>
 				<div class="dropdown">
-					<a class="nave-link" href="#" class="active"><li>Our services</li></a>
+					<a class="nave-link" href="gym.html" class="active"><li>Our services</li></a>
 					<div class="dropdown-content">
 						<a href="#">Fat Loss</a>
 						<a href="#">Zumba</a>
