--- a/Membership.html
+++ b/Membership.html
@@ -25,7 +25,7 @@
                     <li>About us</li>
                 </a>
                 <div class="dropdown">
-                  <a class="nave-link" href="#" class="active"><li>Our services</li></a>
+                  <a class="nave-link" href="gym.html" class="active"><li>Our services</li></a>
                   <div class="dropdown-content">
                     <a href="#">Fat Loss</a>
                     <a href="#">Zumba</a>
