--- a/Membership.html
+++ b/Membership.html
@@ -27,11 +27,11 @@
                 <div class="dropdown">
                   <a class="nave-link" href="gym.html" class="active"><li>Our services</li></a>
                   <div class="dropdown-content">
-                    <a href="#">Fat Loss</a>
-                    <a href="#">Zumba</a>
-                    <a href="#">Yoga</a>
-                    <a href="#">Muscle Gain</a>
-                    <a href="#">Body Mass Index</a>
+                    <a href="gym.html">Fat Loss</a>
+                    <a href="gym.html">Zumba</a>
+                    <a href="gym.html">Yoga</a>
+                    <a href="gym.html">Muscle Gain</a>
+                    <a href="gym.html">Body Mass Index</a>
                     </div>
                   </div>
                 <a class="nave-link" href="Membership.html" class="active">
