--- a/gym.html
+++ b/gym.html
@@ -26,7 +26,8 @@
 					<a class="nave-link" href="index.html" class="active"><li>Home</li></a>
 					<a class="nave-link" href="About us.html" class="active"><li>About us</li></a>
 				    <div class="dropdown">
-						<a class="nave-link" href="gym.html" class="active"><li>Our services</li></a>
+						<a class="nave-link" href="gym.html
+						" class="active"><li>Our services</li></a>
 						<div class="dropdown-content">
 							<a href="#">Fat Loss</a>
 							<a href="#">Zumba</a>
