--- a/gym.html
+++ b/gym.html
@@ -47,14 +47,29 @@
             <h1 class="title">	CLASSES THE GYM</h1>
             <h2 class="title2">Take care of your body. It's the only place you have to live.</h2>
             <center><table >
-            <tr> <td><img src="img/yoga.jpg" class="yoga"><br>                <p>one up, slim down, and find balance with this high-energy <br>summer workout from yoga. It brings inner peace, a spiritual<br> boost, and an unparalleled measure of serenity.<br> yoga is a general term used to describe a vigorous.</p>
+            <tr> <td><div class="img-wrapper"><img src="img/yoga.jpg" class="yoga"></div><br>                <p>One up, slim down, and find balance with this high-energy <br>summer workout from yoga. It brings inner peace, a spiritual<br> boost, and an unparalleled measure of serenity.<br> yoga is a general term used to describe a vigorous.</p>
             </td>
-                 <td><img src="img/muscel.jpg" class="gymnastic"><br><p>Muscles are contractile tissues that allow movement.<br>
+                 <td>
+					<div class="img-wrapper">
+					<img src="img/muscel.jpg" class="gymnastic yoga">
+				</div>
+					<br><p>Muscles are contractile tissues that allow movement.<br>
                     They are made up of fibers that can shorten and lengthen.<br>
                     Muscles work in pairs, with one muscle contracting while <br>the other relaxes.
                     There are three main types of muscle:<br> skeletal, smooth, and cardiac.</p></td></tr>
-                    <tr> <td><img src="img/zumba.jpg" class="zumba"><br><p class="vivo">Are you ready to party yourself into shape? Forget the<br> workout, just lose yourself in the music and find yourself<br> in shape with fitness dance at The Gym. Zumba classes<br> feature exotic rhythms set to high-energy Latin<br> and international beats.</p></td>
-                        <td><img src="img/out.jpg" class="boxing"><br><p class="vivo">Outdoor Training includes Running Club, Park Fitness. This<br> session caters for various paces and abilities and takes you<br> out and around our wonderful city.One of the best ways<br> to blast fat is to train outdoors.</p></td></tr>
+                    <tr> 
+						<td>
+							<div class="img-wrapper">
+						<img src="img/zumba.jpg" class="zumba yoga">
+					</div>
+						<br>
+						<p class="vivo">Are you ready to party yourself into shape? Forget the<br> workout, just lose yourself in the music and find yourself<br> in shape with fitness dance at The Gym. Zumba classes<br> feature exotic rhythms set to high-energy Latin<br> and international beats.</p></td>
+                        <td>
+							<div class="img-wrapper" style="padding-left: 200px;">
+							<img src="img/out.jpg" style="height: fit-content;width: 480px;" class="boxing yoga">
+						</div>
+							<br>
+							<p class="vivo">Outdoor Training includes Running Club, Park Fitness. This<br> session caters for various paces and abilities and takes you<br> out and around our wonderful city.One of the best ways<br> to blast fat is to train outdoors.</p></td></tr>
 
             </table></center>
 	</header>
