--- a/Membership.html
+++ b/Membership.html
@@ -50,35 +50,35 @@
             <div class="membership-plan">
                 <h3>Basic Membership</h3>
                 <p>Price: 1000/- per month</p>
-                - Access to basic gym facilities.<br>
+                <div class="color">- Access to basic gym facilities.<br>
                 - Standard equipment usage.<br>
                 - Limited group fitness classes.<br>
-                - No personal training included.<br>
+                - No personal training included.<br></div>
 
                 <button>Select Plan</button>
             </div>
             <div class="membership-plan">
                 <h3>Premium Membership</h3>
                 <p>Price: 2500/- per month</p>
-                - Access to all gym facilities.<br>
+                <div class="color">- Access to all gym facilities.<br>
                 - Access to premium equipment.<br>
                 - Unlimited access to group fitness classes.<br>
                 - Discounted rates for personal training sessions.<br>
                 - Use of locker room and shower facilities.<br>
-                - Access to online workout plans and nutrition guidance.<br>
+                - Access to online workout plans and nutrition guidance.<br></div>
 
                 <button>Select Plan</button>
             </div>
             <div class="membership-plan">
                 <h3>Diamond Membership</h3>
                 <p>Price: 5000/- per month</p>
-                - All benefits of the Premium Membership.<br>
+                <div class="color">All benefits of the Premium Membership.<br>
                 - 24/7 access to the gym.<br>
                 - Priority booking for group fitness classes.<br>
                 - One-on-one personal training sessions included (e.g., two sessions per month).<br>
                 - Special discounts on supplements and merchandise.<br>
                 - Complimentary towel service.<br>
-                - Access to a private members' lounge with refreshments. <br>
+                - Access to a private members' lounge with refreshments. <br></div>
                 <button>Select Plan</button>
             </div>
         </section>
