--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
 				  <h3>Quick Links</h3>
 				  <ul>
 					<li>
-					  <a href="index.html" title="API">Home</a>
+					  <a href="index.html">Home</a>
 					</li>
 					<li>
-					  <a href="About us.html" title="Documentation">About us</a>
+					  <a href="About us.html" >About us</a>
 					</li>
 					<li>
-					  <a href="Membership.html" title="Release Notes">Membership</a>
+					  <a href="Membership.html" >Membership</a>
 					</li>
 				  </ul>
 				</section>
@@ -135,7 +135,7 @@
 					href="https://www.google.com/maps/place/Mantreshy+apartment/@23.2395542,72.6449515,17z/data=!4m6!3m5!1s0x395c2b8734fb1bd7:0x32b26f498139962c!8m2!3d23.2395493!4d72.6475264!16s%2Fg%2F11sh4hktrb?entry=ttu"><i
 					  class="fa-solid fa-location-dot" style="color: #ffffff;"></i> FF-1, Plot No.374, Mantreshay Appartment,
 					Sector - 23, Gandhinagar, Gujarat</a><br><br>
-				  <a href="9537337323"><i class="fa-solid fa-phone" style="color: #ffffff;"></i> +91 9510652622</a><br><br>
+				  <a href="9510652622"><i class="fa-solid fa-phone" style="color: #ffffff;"></i> +91 9510652622</a><br><br>
 				  <a
 					href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcSPFrCVctcbkxndnCwFTxFWfdNnbsDHWMZqRZgmqBDjtKRvkdLDSrVbfCqdWSbhqJJfLFNfq"><i
 					  class="fa-solid fa-envelope" style="color: #ffffff;"></i> Gold's Gym@gmail.com</a>
