--- a/gym.html
+++ b/gym.html
@@ -23,11 +23,11 @@
 					<h1><i class="fa-solid fa-dumbbell"></i>Gold’s <span>Gym</span></i></h1>
 				</div>
 				<ul>
-					<a class="nave-link" href="index.html" class="active"><li>Home</li></a>
-					<a class="nave-link" href="About us.html" class="active"><li>About us</li></a>
+					<a class="nave-link" href="index.html" class="active" target="_parent"><li>Home</li></a>
+					<a class="nave-link" href="About us.html" class="active" target="_parent"><li>About us</li></a>
 				    <div class="dropdown">
 						<a class="nave-link" href="gym.html
-						" class="active"><li>Our services</li></a>
+						" class="active" target="_parent"><li>Our services</li></a>
 						<div class="dropdown-content">
 							<a href="#">Fat Loss</a>
 							<a href="#">Zumba</a>
@@ -36,8 +36,8 @@
 							<a href="#">Body Mass Index</a>
 						  </div>
 						</div>
-					<a class="nave-link" href="Membership.html" class="active"><li>Membership</li></a>
-					<a class="nave-link" href="Contacts.html" class="active"><li>Contacts</li></a>
+					<a class="nave-link" href="Membership.html" class="active" target="_parent"><li>Membership</li></a>
+					<a class="nave-link" href="Contacts.html" class="active" target="_parent"><li>Contacts</li></a>
 				</ul>
 				<div class="left">
 					<button class="log-in"><a href="loginform.html">LogIn</a></button>
